samples/_failures_safe/1761377659_ec95a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61e2719d.c:137: error: expected ‘;’, ‘,’ or ‘)’ at end of input
